# OmniInfer-VLM

./: .gitignore  CMakeLists.txt  README.md
common/: build-info.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-htp.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp
ggml/src/ggml-htp/: CMakeLists.txt  debug_print.h  dsprpc_interface.cc  ggml-htp-impl.h  ggml-htp.cc  htp-cpu-impl.c  htp-ops.cc  htp-ops.h  htp_layout.h  mse_checker.h  rpcmem_mapper.cc  rpcmem_mapper.h
include/: llama.h
src/: llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-graph.cpp  llama-kv-cache.cpp  llama-model.cpp  llama.cpp
tools/: CMakeLists.txt
tools/mtmd/: CMakeLists.txt  clip.cpp  mtmd-cli.cpp  mtmd-helper.cpp  mtmd.cpp  mtmd.h  my-encode.cc
